# J4S-Intern-Module-Helper

./: .gitignore  README.md  main.py  merged_grading_sheet.csv  pyproject.toml
data/: Moodle Helper.pptx  NDA1 feedback (1).xlsx  Split 1.csv  Split 2.csv  Split 3.csv  Student Internship 2025 – Develop a Moodle Feedback Helper for Tutors.docx  allstudents.csv  generic-feedbacks.xlsx  graded-sheet-partially.csv  jeff  test.csv
src/: Main.py  Main2.py  app.py  feedback.py  split.py
src/j4s_intern_module_helper/: Main.py  app.py  fake all students.py  fake submitted.py  fakegradesheet.py  feedback.py  merge.py  split.py  update.py  utils.py
src/j4s_intern_module_helper/data/: generic-feedbacks.xlsx  graded-sheet-partially.csv  submitted-sheet0.csv  submitted-sheet1.csv  test.csv
