[project]
name = "j4s-intern-module-helper"
version = "0.1.0"
description = ""
authors = [
    {name = "Liam-James-Ford",email = "19067511@stu.mmu.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]

[tool.poetry]
packages = [{include = "j4s_intern_module_helper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
